<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingEnd="@dimen/double_margin"
    android:paddingStart="@dimen/double_margin"
    android:paddingTop="@dimen/double_margin"
    tools:context="com.scaledinference.amped.store.CartActivity">

    <LinearLayout
        android:id="@+id/checkoutLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:textSize="@dimen/list_item_title_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/currency_sign"
                    android:textSize="@dimen/list_item_title_size" />

                <TextView
                    android:id="@+id/subtotalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/subtotal_value_stub"
                    android:textSize="@dimen/list_item_title_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:textSize="@dimen/list_item_title_size">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_items"
                    android:textSize="@dimen/list_item_title_size" />

                <TextView
                    android:id="@+id/countTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="@dimen/list_item_title_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/freeShippingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_in_time_request"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/list_item_title_size" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openCheckoutPage"
            android:text="@string/checkout" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/double_margin"
        android:layout_marginStart="@dimen/double_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkoutLayout" />

</android.support.constraint.ConstraintLayout>
